Adding cache and circuit breaker to be more resilient